add userlist to repositry, add field for authorities to user class